# thermostat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mfg-config.csv  mfg-values.csv  partitions.csv  sdkconfig.defaults
components/slow-pwm/: CMakeLists.txt  slow_pwm.c  slow_pwm.h
components/temp-sensor/: CMakeLists.txt  temp_sensor.c  temp_sensor.h
hardware/: LICENSE  thermostat.kicad_pcb  thermostat.pro  thermostat.sch
main/: CMakeLists.txt  Kconfig.projbuild  app_events.c  app_events.h  app_homekit.c  app_homekit.h  app_main.c  app_mqtt.c  app_mqtt.h  app_ota.c  app_ota.h  app_restarter.c  app_restarter.h  app_stats.c  app_stats.h  app_thermometer.c  app_thermometer.h  app_thermostat.c  app_thermostat.h  app_timekeeper.c  app_timekeeper.h  app_wifi.c  app_wifi.h
